# adv_mla_lab_3_sgd_api

./: pyproject.toml
app/: 36120-25SP-Lab03_Ex04_Instructions.ipynb  36120-25SP-Lab03_Ex04_Solutions.ipynb  main.py
app/.ipynb_checkpoints/: 36120-25SP-Lab03_Ex04_Solutions-checkpoint.ipynb
models/: sgd_pipeline.joblib
