[project]
name = "lab3-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Man-snow",email = "rkf22yxf2e6ly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "jupyterlab (==4.4.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
